# Spaceship_Titanic

./: .gitignore  README.md  preprocess.py  pyproject.toml  sample_submission.csv:Zone.Identifier
conf/: main.yaml
conf/data/: base.yaml
conf/exp/: optuna.yaml
conf/model/params/: catboost.yaml  lightgbm.yaml
dataset/: dataset.py  utils.py
experiment/: __init__.py  experiment.py  optuna.py  utils.py
model/: base_model.py  gbm.py  get_model.py
model/ensemble/: __init__.py  ensemble.py  xgb_lgbm.py
