[tool.poetry]
name = "spaceship-titanic"
version = "0.1.0"
description = ""
authors = ["LeonTanemura <leontanemura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.2"
hydra-core = "^1.3.2"
optuna = "^3.6.1"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
